Tiny spacing fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -69,7 +69,6 @@ ul {
     list-style: none;
     margin-left: 1em;
     margin-top: 1em;
-    margin-bottom: 0.5em;
     font-size: 0.9em;
 
     li {
